@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package Model as ModelPackage <<Rectangle>>{
  ' ===== Interfaces =====
  class "<<interface>>\nReadOnlyAddressBook" as ReadOnlyAddressBook
  class "<<interface>>\nReadOnlyUserPrefs"  as ReadOnlyUserPrefs
  class "<<interface>>\nModel"              as Model

  ' ===== Core =====
  class AddressBook
  class ModelManager
  class UserPrefs

  ' ===== Collections =====
  class UniquePersonList
  class UniqueEventList
  class ActiveTags

  ' ===== Entities =====
  class Person
  class PersonId
  class Website
  class Email
  class Name
  class Phone
  class Tag

  class Event
  class EventDate
  class EventName
  class EventTime

  ' Hidden helper
  class I #FFFFFF
}

class HiddenOutside #FFFFFF
HiddenOutside ..> Model

' ===== Interface implementations =====
AddressBook .up.|> ReadOnlyAddressBook
ModelManager .up.|> Model
Model .right.> ReadOnlyUserPrefs
Model .left.>  ReadOnlyAddressBook
UserPrefs .up.|> ReadOnlyUserPrefs

' ===== Model relationships =====
ModelManager -left->  "1" AddressBook
ModelManager -right-> "1" UserPrefs
AddressBook *--> "1" UniquePersonList
AddressBook *--> "1" UniqueEventList
ModelManager --> ActiveTags

UniquePersonList --> "~* all" Person
UniqueEventList  --> "~* all" Event
ModelManager     --> "~* filtered" Person
ModelManager     --> "~* filtered" Event

' ===== Active tags =====
ActiveTags --> "~* active" Tag

' ===== Person aggregate =====
Person *--> "1" Name
Person *--> "1" Phone
Person *--> "1" Email
Person *--> "1" Website
Person *--> "*" Tag
' Removed direct Person->PersonId link, will add shared below

' ===== Event aggregate =====
Event *--> "1" EventName
Event *--> "1" EventDate
Event *--> "1" EventTime

' ===== Shared PersonId =====
Person *--> "1" PersonId
Event  --> "*" PersonId

' ===== Hidden layout alignments =====

' top interfaces
Model -[hidden]up-> ReadOnlyAddressBook
Model -[hidden]up-> ReadOnlyUserPrefs

' list-level row
UniquePersonList -[hidden]right-> ActiveTags
ActiveTags       -[hidden]right-> UniqueEventList

' keep Person & Event side-by-side
Person -[hidden]right-> Event

' place PersonId between them
Person -[hidden]right-> PersonId
PersonId -[hidden]right-> Event

' align Person fields horizontally
Name    -[hidden]right-> Phone
Phone   -[hidden]right-> Website
Website -[hidden]right-> Email

' align Event fields horizontally
EventName -[hidden]right-> EventDate
EventDate -[hidden]right-> EventTime

' vertical balance
Person          -[hidden]up-> I
UniquePersonList-[hidden]up-> AddressBook

@enduml
